manifests/php-service.tpl.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${namespace}
  name: php
  labels:
    app: php
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: NodePort
