manifests/php-ingress.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-ingress
  namespace: ${namespace}
  annotations:
    cert-manager.io/cluster-issuer: "syndeno-issuer"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rule:
  - host: "php.plt.ko.syndeno.net"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: php
            port:
              number: 8081
  tls:
    hosts: ["php.plt.ko.syndeno.net"]
    secret_name: "php.plt.ko.syndeno.net"
